--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -5,7 +5,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 form-label">
-                            <label class="text-color kt-padding-l-10">Customer ID</label>
+                            <label class="text-color kt-padding-l-10 mandatory">Customer ID</label>
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" placeholder="10234501203203"
@@ -26,7 +26,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 offset-2 form-label">
-                            <label class="text-color kt-padding-l-10">Mobile Number</label>
+                            <label class="text-color kt-padding-l-10 ">Mobile Number</label>
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" placeholder="9845678991"
