--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
@@ -776,7 +776,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-3 offset-1 form-label">
-                                <label [class.mandatory]="viewOnly" class="">Signature</label>
+                                <label class="">Signature</label>
                             </div>
                             <div class="col-7">
                                 <div class="input-group mb-3" *ngIf="viewOnly">
