--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
@@ -5,7 +5,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 form-label">
-                            <label class="text-color kt-padding-l-10">Name</label>
+                            <label class="text-color kt-padding-l-10 mandatory">Name</label>
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" placeholder="vishwas shetty"
@@ -21,7 +21,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 offset-2 form-label">
-                            <label class="text-color kt-padding-l-10">Age</label>
+                            <label class="text-color kt-padding-l-10 mandatory">Age</label>
                         </div>
                         <div class="col-6">
                             <input type="number" class="form-control" placeholder="18" numbersOnly
@@ -38,7 +38,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 form-label">
-                            <label class="text-color kt-padding-l-10">Relationship</label>
+                            <label class="text-color kt-padding-l-10 mandatory">Relationship</label>
                         </div>
                         <div class="col-6">
                             <input type="text" class="form-control" placeholder="eg.Son,Father"
@@ -62,7 +62,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-4 form-label">
-                                <label class="text-color kt-padding-l-10">Guardian Name</label>
+                                <label class="text-color kt-padding-l-10 mandatory">Guardian Name</label>
                             </div>
                             <div class="col-6">
                                 <input type="text" class="form-control" placeholder="vishwas shetty"
@@ -78,7 +78,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-4 offset-2 form-label">
-                                <label class="text-color  kt-padding-l-10">Guardian Age</label>
+                                <label class="text-color  kt-padding-l-10 mandatory">Guardian Age</label>
                             </div>
                             <div class="col-6">
                                 <input type="number" class="form-control" placeholder="25" numbersOnly
@@ -96,7 +96,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-4 form-label">
-                                <label class="text-color kt-padding-l-10">Guardian Relations</label>
+                                <label class="text-color kt-padding-l-10 mandatory">Guardian Relations</label>
                             </div>
                             <div class="col-6">
                                 <input type="text" class="form-control" placeholder="eg.Son,Father"
@@ -118,97 +118,5 @@
             <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
         </div>
     </div>
-
-    <!-- <div class="row justify-content-center">
-        <div class="col-6">
-            <div class="row">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Name</label>
-                </div>
-                <div class="col-6">
-                    <input type="text" class="form-control" placeholder="vishwas shetty" formControlName="nomineeName"
-                        [class.isError]="controls.nomineeName.touched && controls.nomineeName.invalid">
-                    <mat-error *ngIf="controls.nomineeName.touched && controls.nomineeName.invalid">
-                        <span *ngIf="controls.nomineeName.errors?.required">Field is Required</span>
-                        <span *ngIf="controls.nomineeName.errors?.pattern">Invalid Input</span>
-                    </mat-error>
-                </div>
-            </div>
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Age</label>
-                </div>
-                <div class="col-6">
-                    <input type="number" class="form-control" placeholder="18" numbersOnly formControlName="nomineeAge"
-                        (blur)="checkForMinor()"
-                        [class.isError]="controls.nomineeAge.touched && controls.nomineeAge.invalid">
-                    <mat-error *ngIf="controls.nomineeAge.touched && controls.nomineeAge.invalid">
-                        Field is Required
-                    </mat-error>
-                </div>
-            </div>
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Relationship</label>
-                </div>
-                <div class="col-6">
-                    <input type="text" class="form-control" placeholder="eg.Son,Father" formControlName="relationship"
-                        [class.isError]="controls.relationship.touched && controls.relationship.invalid">
-                    <mat-error *ngIf="controls.relationship.touched && controls.relationship.invalid">
-                        <span *ngIf="controls.relationship.errors?.required">Field is Required</span>
-                        <span *ngIf="controls.relationship.errors?.pattern">Invalid Input</span>
-                    </mat-error>
-                </div>
-            </div>
-            <div *ngIf="controls.nomineeType.value == 'minor'">
-                <div class="row kt-margin-t-15">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">Guardian Name</label>
-                    </div>
-                    <div class="col-6">
-                        <input type="text" class="form-control" placeholder="vishwas shetty"
-                            formControlName="guardianName"
-                            [class.isError]="controls.guardianName.touched && controls.guardianName.invalid">
-                        <mat-error *ngIf="controls.guardianName.touched && controls.guardianName.invalid">
-                            <span *ngIf="controls.guardianName.errors?.required">Field is Required</span>
-                            <span *ngIf="controls.guardianName.errors?.pattern">Invalid Input</span>
-                        </mat-error>
-                    </div>
-                </div>
-                <div class="row kt-margin-t-15">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">Guardian Age</label>
-                    </div>
-                    <div class="col-6">
-                        <input type="number" class="form-control" placeholder="25" numbersOnly
-                            formControlName="guardianAge"
-                            [class.isError]="controls.guardianAge.touched && controls.guardianAge.invalid">
-                        <mat-error *ngIf="controls.guardianAge.touched && controls.guardianAge.invalid">
-                            <span *ngIf="controls.guardianAge.errors?.required">Field is Required</span>
-                            <span *ngIf="controls.guardianAge.errors?.pattern">Age should be greater than 17 </span>
-                        </mat-error>
-                    </div>
-                </div>
-                <div class="row kt-margin-t-15">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">Guardian Relations</label>
-                    </div>
-                    <div class="col-6">
-                        <input type="text" class="form-control" placeholder="eg.Son,Father"
-                            formControlName="guardianRelationship"
-                            [class.isError]="controls.guardianRelationship.touched && controls.guardianRelationship.invalid">
-                        <mat-error
-                            *ngIf="controls.guardianRelationship.touched && controls.guardianRelationship.invalid">
-                            <span *ngIf="controls.guardianRelationship.errors?.required">Field is Required</span>
-                            <span *ngIf="controls.guardianRelationship.errors?.pattern">Invalid Input</span>
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-            <div class="row offset-4 kt-padding-l-10 kt-margin-t-20">
-                <kt-button [value]="'Next'" [type]="'button'" (action)="scrollToOrnaments()"></kt-button>
-            </div>
-        </div>
-    </div> -->
 
 </form>
