--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -130,7 +130,7 @@
                     <div class="offset-4 col-6">
                         <p class="text-gray font-weight-500 m-0">Total Amount</p>
                         <h3 class=" text-color">
-                            <span class="currency">{{loanAmount | currency:'INR':'symbol' : '1.0-0'}}</span>
+                            <span class="currency">{{loanAmount | indianCurrencyFormat}}</span>
                         </h3>
                     </div>
                 </div>
