--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -70,6 +70,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-4 offset-2 form-label">
+                            <label class="text-color kt-padding-l-10">Loan Purpose</label>
+                        </div>
+                        <div class="col-6">
+                            <select formControlName="purpose" class="form-control">
+                                <option value="" selected disabled>Select Purpose</option>
+                                <option value="">Select</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="text-right py-3 col-12" *ngIf="!disable">
