--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
@@ -419,7 +419,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="offset-1 col-12 form-label header">
-                                <h6> Residential Address </h6>
+                                <h6>Current Residential Address </h6>
                             </div>
                         </div>
                     </div>
