multiple images and loan bugs

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
@@ -124,7 +124,7 @@
                                     <input type="text" class="form-control" placeholder="Select File"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
                                         formControlName="passbookProofImage"
-                                        [class.isError]="controls.passbookProofImage.touched && controls.passbookProofImage.invalid" />
+                                        [class.isError]="controls.passbookProof.touched && controls.passbookProof.invalid" />
                                     <div class="input-group-append">
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                                             (click)="passbook.click()">Attach</span>
