--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -324,9 +324,9 @@
                                 <!-- </mat-form-field> -->
                             </div>
                         </div>
-                        <div class="row kt-padding-t-15">
+                        <div class="row kt-padding-t-15" *ngIf="controls.statusId.value == 5">
                             <div class="col-4 form-label">
-                                <mat-label [ngClass]="{'mandatory':controls.statusId.value ==5}">Comment</mat-label>
+                                <mat-label [ngClass]="{'mandatory':controls.statusId.value == 5}">Comment</mat-label>
                             </div>
 
                             <div class="col-8">
